--- a/src/patternfly/components/Select/__select-checkbox-checked.hbs
+++ b/src/patternfly/components/Select/__select-checkbox-checked.hbs
@@ -9,11 +9,11 @@
     {{/select-menu-search}}
     {{> divider}}
   {{/if}}
-  {{#> select-menu-fieldset select-menu-fieldset--attribute='aria-label="Select input"' check--IsLabelWrapped=true}}
-    {{> check check--id=(concat select--id '-check-active"') check-label--text="Active"}}
-    {{> check check--id=(concat select--id '-check-canceled"') check-label--text="canceled"}}
-    {{> check check--id=(concat select--id '-check-paused"') check-label--text="Paused"}}
-    {{> check check--id=(concat select--id '-check-warning"') check-label--text="Warning"}}
-    {{> check check--id=(concat select--id '-check-restarted"') check-label--text="Restarted"}}
+  {{#> select-menu-fieldset select-menu-fieldset--attribute='aria-label="Select input"' check--modifier="pf-v5-c-select__menu-item" check--IsLabelWrapped=true}}
+    {{> check check--id=(concat select--id '-check-active') check-label--text="Active" check-input--IsChecked=true}}
+    {{> check check--id=(concat select--id '-check-canceled') check-label--text="Canceled" check-input--IsChecked=true}}
+    {{> check check--id=(concat select--id '-check-paused') check-label--text="Paused"}}
+    {{> check check--id=(concat select--id '-check-warning') check-label--text="Warning" check-input--IsChecked=true}}
+    {{> check check--id=(concat select--id '-check-restarted') check-label--text="Restarted"}}
   {{/select-menu-fieldset}}
 </div>
