chore(radio): updates

--- a/src/patternfly/components/Radio/radio-input.hbs
+++ b/src/patternfly/components/Radio/radio-input.hbs
@@ -10,7 +10,7 @@
   {{#if radio--IsStandalone}}
     aria-label="{{#if radio--standalone--label}}{{radio--standalone--label}}{{else}}Standalone radio{{/if}}"
   {{/if}}
-  {{#if radio-input--IsChecked}}
+  {{#if radio--IsChecked}}
     checked
   {{/if}}
   {{#if radio-input--IsDisabled}}
