--- a/src/patternfly/components/Radio/radio-body.hbs
+++ b/src/patternfly/components/Radio/radio-body.hbs
@@ -2,5 +2,9 @@
   {{#if radio-body--attribute}}
     {{{radio-body--attribute}}}
   {{/if}}>
-  {{> @partial-block}}
+  {{#if radio-body--text}}
+    {{radio-body--text}}
+  {{else if @partial-block}}
+    {{> @partial-block}}
+  {{/if}}
 </span>
