--- a/src/patternfly/components/Check/check-description.hbs
+++ b/src/patternfly/components/Check/check-description.hbs
@@ -1,6 +1,11 @@
 <span class="{{pfv}}check__description{{#if check-description--modifier}} {{check-description--modifier}}{{/if}}"
+  id="{{check--id}}-description"
   {{#if check-description--attribute}}
     {{{check-description--attribute}}}
   {{/if}}>
-  {{> @partial-block}}
+  {{#if check-description--text}}
+    {{check-description--text}}
+  {{else if @partial-block}}
+    {{> @partial-block}}
+  {{/if}}
 </span>
